--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -30,24 +30,23 @@
     </div>
   </div>
 </header>
-<section class="main_info">
+<section class="main_info jumbotron">
   <div class="mdc-layout-grid wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="service">
-          <h2>Team as a service</h2>
-          <blockquote>
+          <h2 class="jumbotron__title">Team as a service</h2>
+          <blockquote class="jumbotron__lead">
             <p>And they are perfectionists. Ask them to build you a product, and they will
               not give you what you asked for. They will give you what you&nbsp;want.</p>
           </blockquote>
-          <a class="action-button">How we work</a>
-        </div>
+          <a class="action-button jumbotron__cta">How we work</a>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <p>TOPMONKS</p>
+        <p class="box--purple">TOPMONKS</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <div class="box listen">
+          <img src="/images/topmonks.com/listen_ic.svg">
           <h3>We listen</h3>
           <p>We see the time devoted to your project as an investment into your future.
             We listen to your ideas and needs and think about the best solution to do the project right the first
@@ -56,6 +55,7 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <div class="box develop">
+          <img src="/images/topmonks.com/develop_ic.svg">
           <h3>We develop</h3>
           <p>We work with the latest technologies to get the best results. We don’t need lengthy training or
             explanations.
@@ -64,6 +64,7 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <div class="box verify">
+          <img src="/images/topmonks.com/verify_ic.svg">
           <h3>We verify</h3>
           <p>We closely examine and test every idea and every feature in every step of the project.
             We concentrate on the needs of the end user. We don’t take risks. We don’t launch anything we don’t stand
@@ -79,100 +80,103 @@
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>You will love working with us</h2>
-        <p>Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
-          and gives us the ability to apply various technology solutions, whether they are old or new.</p>
-      </div>
-      <div
-        class="white white-first mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        <p>We will bring start-up playfulness and a fresh point of view to your project.</p>
-      </div>
-      <div
-        class="white white-second mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        <p>We will guide you through and help you understand the world of IT.</p>
-      </div>
+          <p>Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
+            and gives us the ability to apply various technology solutions, whether they are old or new.</p>
+        </div>
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <p class="box">We will bring start-up playfulness and a fresh point of view to your project.</p>
+        </div>
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <p class="box">We will guide you through and help you understand the world of IT.</p>
+        </div>
 
-      <div
-        class="purple mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        <p>We respect the processes. Your company, your rules.</p>
-      </div>
-      <div
-        class="purple mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        <p>We will help you stop worrying.</p>
-      </div>
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <p class="box box--purple">We respect the processes. Your company, your rules.</p>
+        </div>
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <p class="box box--purple">We will help you stop worrying.</p>
+        </div>
 
-      <div
-        class="white white-third mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        <p>We are open and fair. We keep our promises.</p>
-      </div>
-      <div
-        class="white white-fourth mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        <p>We can anticipate and minimize the risks associated with technical IT solutions.</p>
-      </div>
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <p class="box">We are open and fair. We keep our promises.</p>
+        </div>
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <p class="box">We can anticipate and minimize the risks associated with technical IT solutions.</p>
+        </div>
 
-      <div
-        class="purple mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        <p>We keep educating ourselves, you, and your children.</p>
-      </div>
-      <div
-        class="purple mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        <p>We think in the context of your business. With our help, your product will make sense to your end
-          users.</p>
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <p class="box box--purple">We keep educating ourselves, you, and your children.</p>
+        </div>
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <p class="box box--purple">We think in the context of your business. With our help, your product will make
+            sense
+            to your end
+            users.</p>
+        </div>
       </div>
     </div>
   </div>
 </section>
-  <section class="product">
-    <div class="mdc-layout-grid wrapper">
-      <div class="mdc-layout-grid__inner">
-        <div
-          class="research mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-          <h3>Research</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
-        </div>
-        <div
-          class="design mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-          <h3>Design</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
-        </div>
-        <div
-          class="develop mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-          <h3>Development</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
-        </div>
-        <div
-          class="sales mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-          <h3>Sales</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
-        </div>
+<section class="product">
+  <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid__inner">
+      <div
+        class="step_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+        <h3>Research</h3>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
+      </div>
+      <div
+        class="step_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+        <h3>Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
+      </div>
+      <div
+        class="step_3 develop mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+        <h3>Development</h3>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
+      </div>
+      <div
+        class="step_4 sales mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+        <h3>Sales</h3>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
     </div>
-  </section>
-  <section class="partners">
-    <div class="mdc-layout-grid wrapper">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Who works with us</h2>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <p>logo</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <p>logo</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <p>logo</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <p>logo</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <p>logo</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-          <p>logo</p>
-        </div>
+  </div>
+</section>
+<section class="partners">
+  <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h2>Who works with us</h2>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+        <p>logo</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+        <p>logo</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+        <p>logo</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+        <p>logo</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+        <p>logo</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+        <p>logo</p>
       </div>
     </div>
+  </div>
 </section>
 
 <section class="studies">
@@ -239,7 +243,7 @@
     <div class="mdc-layout-grid__inner">
       <div class="contact_title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Contact</h2>
-        <p>Do you have any questions? Are you interested in working with us? Contact us.</p>
+        <p clasDo you have any questions? Are you interested in working with us? Contact us.</p>
       </div>
       <div class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <div class="photo">
