--- a/src/html/prodeti.topmonks.cz/index.html
+++ b/src/html/prodeti.topmonks.cz/index.html
@@ -145,7 +145,8 @@
   <section id="courses" class="courses">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+        <div
+          class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
           <h3>Tvoříme hru</h3>
           <h4>Základy</h4>
           <p>První lekce se věnuje zejména úvodu do světa programování a základům
@@ -153,7 +154,8 @@
             programovat funkční a zábavnou počítačovou&nbsp;hru.</p>
           <a href="#tvorime-hru" class="button">Více info</a>
         </div>
-        <div class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+        <div
+          class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
           <h3>Tvoříme hru</h3>
           <h4>Hours of Code</h4>
           <p>Druhá lekce navazuje na první a pokračujeme v&nbsp;tvorbě her. Přidáváme
@@ -161,7 +163,8 @@
             počítat skóre, ovládácí prvky, zvuk,&nbsp;…</p>
           <a href="#tvorime-hru" class="button">Více info</a>
         </div>
-        <div class="fill_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+        <div
+          class="fill_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
           <h3>Robot Edison I</h3>
           <h4>Úvod</h4>
           <p>Pomocí robota Edison si děti vyzkouší z&nbsp;virtuálního světa ovládat
@@ -169,7 +172,8 @@
             robotům příkazy, v&nbsp;jakém směru se mají pohybovat.</p>
           <a href="#robot-edison-i" class="button">Více info</a>
         </div>
-        <div class="fill_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+        <div
+          class="fill_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
           <h3>Robot Edison II</h3>
           <h4>Pokročilé</h4>
           <p>V&nbsp;posledním kurzu se děti učí další možnosti ovládání robota a
@@ -224,11 +228,13 @@
             individuálně. Kurzy rozvíjí logické a kritické myšlení a učí děti pracovat v týmech.</p>
         </div>
 
-        <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+        <div
+          class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <img src="/images/prodeti/tvorimeHru.png">
         </div>
 
-        <div id="tvorime-hru" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+        <div id="tvorime-hru"
+             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <h3>Tvoříme hru</h3>
           <p>První lekce se věnuje úvodu do světa programování. Rovnou do toho skočíme i&nbsp;prakticky a děti
             si vyzkouší naprogramovat vlastní počítačovou&nbsp;hru.</p>
@@ -238,43 +244,23 @@
 
           <p>Děti si z&nbsp;první lekce odnesou především základy algoritmizace a vlastnoručně vytvořenou funkční&nbsp;hru.</p>
         </div>
-        <div id="tvorime-hru-ii" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
-          <h3>Tvoříme hru</h3>
-          <p>Druhá lekce se věnuje pokročilejšímu programování. Rovnou do toho skočíme i&nbsp;prakticky a děti
-            si vyzkouší naprogramovat vlastní počítačovou&nbsp;hru.</p>
-
-          <p>Jednoduché plošinové hry programujeme pomocí skládání bloků. Lekce samotná je koncipována jako
-            hra. Formou jednoduchých úkolů děti postupně budují vlastní hru a otevírají si postupně další možnosti.</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
-          <img src="/images/prodeti/tvorimeHru.png">
-        </div>
-        <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
-          <img src="/images/prodeti/robotEdison.png">
-        </div>
-        <div id="robot-edison-i" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
-          <h3>Robot Edison I</h3>
+        <div id="robot-edison-i"
+             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+          <h3>Robot Edison</h3>
           <p>Na úvodní lekci se děti seznámí s&nbsp;roboty Edison a zkusí si ze světa virtuálního ovládat ten
             reálný. Budou řešit jednoduché úlohy, během kterých se naučí ovládat robota pomocí programovacího jazyka
             Scratch.</p>
 
-          <p>Ta je specifická v&nbsp;tom, že děti nemusí psát žádný kód, programuje se pomocí skládání
-            obrázkových bloků do funkčních řad. Jednotlivé bloky reprezentují akce, které může robot vykonávat.</p>
+          <p>V&nbsp navazující lekci naznačíme další potenciál programování robotů Edison. Děti si pak
+            musí poradit s&nbsp;reálným problémem autonomní přepravy osob ve&nbsp;městě. Formou hry si robota budou moct
+            naprogramovat tak, aby se choval autonomně.</p>
 
           <p>Například jeď vpřed, otoč se, rozsviť světla, zastav se před překážkou atd. Úlohy v&nbsp;tomto
             kurzu jsou sestaveny tak, aby dětem postupně odhalovali jednotlivé možnosti robota.</p>
         </div>
-
-        <div id="robot-edison-ii" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
-          <h3>Robot Edison II</h3>
-          <p>Děti už z&nbsp;minulé lekce umí robota rozpohybovat a projet s&nbsp;ním předem připravenou trať.
-            Dokonce umí program upravit tak, aby se robot choval autonomně, což je stěžejní pro tuto pokročilou&nbsp;lekci.</p>
-
-          <p>V&nbsp;této navazující lekci naznačíme další potenciál programování robotů Edison. Děti si pak
-            musí poradit s&nbsp;reálným problémem autonomní přepravy osob ve&nbsp;městě.</p>
-        </div>
-        <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
-          <img src="/images/prodeti/robotEdison2.png">
+        <div
+          class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+          <img src="/images/prodeti/robotEdison.png">
         </div>
       </div>
     </div>
@@ -298,6 +284,34 @@
             <div class="mdc-layout-grid__cell"><img src="/images/prodeti/galerie/foto-9.jpg" alt="" width="300"></div>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="teachers">
+    <div class="mdc-layout-grid wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Naši Lektoři</h2>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <div class="photo">
+            <img src="/images/prodeti/j.penzes.jpg" alt=" [fotografie] Jiří Penzeš">
+          </div>
+          <div class="name">
+            Jiří Penzeš
+          </div>
+          <a class="mail" href="mailto:jiri.penzes@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jiri.penzes@topmonks.com</a>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          <div class="photo">
+            <img src="/images/prodeti/j.penzes.jpg" alt=" [fotografie] Jiří Penzeš">
+          </div>
+          <div class="name">
+            Jan Macháček
+          </div>
+          <a class="mail" href="mailto:jan.machacek@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jan.machacek@topmonks.com</a>
+        </div>
+
       </div>
     </div>
   </section>
