--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -11,11 +11,24 @@
 <header>
   <div class="mdc-layout-grid wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+      <div class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+        <div class="container" onclick="myFunction(this)">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+
+        <script>
+          function myFunction(x) {
+            x.classList.toggle("change");
+          }
+        </script>
+      </div>
+        <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/monk.svg">
         <a class="pure-menu-heading menu-brand-logo active" href="/" title="Go to homepage">TopMonks </a>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="pure-menu pure-menu-horizontal menu-can-transform">
           <ul class="pure-menu-list">
             <li style="width: 166px" class="pure-menu-item"><a href="https://studio.topmonks.com/"
@@ -186,32 +199,32 @@
         <h2>Case studies</h2>
         <p class="sub-text">We have learned something from every collaboration with our clients.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/sporka.jpg">
         <h3>Česká spořitelna</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/pricefx.jpg">
         <h3>PriceFX</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/purposefly.jpg">
         <h3>PurposeFly</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/hearth.jpg">
         <h3>Hearth.net</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/techloop.jpg">
         <h3>Techloop.io</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/europe.jpg">
         <h3>GoRealEurope.com</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
@@ -245,7 +258,7 @@
         <h2>Contact</h2>
         <p clasDo you have any questions? Are you interested in working with us? Contact us.</p>
       </div>
-      <div class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="photo">
           <img src="/images/topmonks.com/kristy.jpg">
         </div>
@@ -275,8 +288,8 @@
         </a>
 
       </div>
-      <div class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <div class="photo">
+      <div class="person mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+        <div class="person--photo">
           <img src="/images/topmonks.com/gery.jpg">
         </div>
         <h4>Ladislav Gerencséry</h4>
