--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -11,7 +11,8 @@
 <header>
   <div class="mdc-layout-grid wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+      <div
+        class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
         <div class="container" onclick="myFunction(this)">
           <div class="bar1"></div>
           <div class="bar2"></div>
@@ -24,7 +25,8 @@
           }
         </script>
       </div>
-        <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
+      <div
+        class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/monk.svg">
         <a class="pure-menu-heading menu-brand-logo active" href="/" title="Go to homepage">TopMonks </a>
       </div>
@@ -47,12 +49,12 @@
   <div class="mdc-layout-grid wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2 class="jumbotron__title">Team as a service</h2>
-          <blockquote class="jumbotron__lead">
-            <p>And they are perfectionists. Ask them to build you a product, and they will
-              not give you what you asked for. They will give you what you&nbsp;want.</p>
-          </blockquote>
-          <a class="action-button jumbotron__cta">How we work</a>
+        <h2 class="jumbotron__title">Team as a service</h2>
+        <blockquote class="jumbotron__lead">
+          <p>And they are perfectionists. Ask them to build you a product, and they will
+            not give you what you asked for. They will give you what you&nbsp;want.</p>
+        </blockquote>
+        <a class="action-button jumbotron__cta">How we work</a>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <p class="box--purple">TOPMONKS</p>
@@ -93,9 +95,9 @@
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>You will love working with us</h2>
-          <p>Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
-            and gives us the ability to apply various technology solutions, whether they are old or new.</p>
-        </div>
+        <p>Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
+          and gives us the ability to apply various technology solutions, whether they are old or new.</p>
+      </div>
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
           <p class="box">We will bring start-up playfulness and a fresh point of view to your project.</p>
@@ -134,8 +136,8 @@
             to your end
             users.</p>
         </div>
-      </div>
     </div>
+  </div>
   </div>
 </section>
 <section class="product">
@@ -171,7 +173,7 @@
         <h2>Who works with us</h2>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <p>logo</p>
+       <img src="/images/topmonks.com/logo-clients/purposefly.png">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
         <p>logo</p>
@@ -199,32 +201,38 @@
         <h2>Case studies</h2>
         <p class="sub-text">We have learned something from every collaboration with our clients.</p>
       </div>
-      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+      <div
+        class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/sporka.jpg">
         <h3>Česká spořitelna</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
-      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+      <div
+        class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/pricefx.jpg">
         <h3>PriceFX</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
-      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+      <div
+        class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/purposefly.jpg">
         <h3>PurposeFly</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
-      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+      <div
+        class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/hearth.jpg">
         <h3>Hearth.net</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
-      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+      <div
+        class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/techloop.jpg">
         <h3>Techloop.io</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
-      <div class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+      <div
+        class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/europe.jpg">
         <h3>GoRealEurope.com</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
@@ -258,7 +266,8 @@
         <h2>Contact</h2>
         <p clasDo you have any questions? Are you interested in working with us? Contact us.</p>
       </div>
-      <div class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div
+        class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="photo">
           <img src="/images/topmonks.com/kristy.jpg">
         </div>
@@ -288,7 +297,8 @@
         </a>
 
       </div>
-      <div class="person mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div
+        class="person mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="person--photo">
           <img src="/images/topmonks.com/gery.jpg">
         </div>
