--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -33,12 +33,12 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="pure-menu pure-menu-horizontal menu-can-transform">
           <ul class="pure-menu-list">
-            <li style="width: 166px" class="pure-menu-item"><a href="https://studio.topmonks.com/"
-                                                               class="pure-menu-link">startup studio</a></li>
             <li style="width: 108px" class="pure-menu-item"><a href="/company-values/" class="pure-menu-link">about
               us</a></li>
             <li style="width: 98px" class="pure-menu-item"><a href="/community/" class="pure-menu-link">meet us</a></li>
             <li style="width: 104px" class="pure-menu-item"><a href="/contact/" class="pure-menu-link">contacts</a></li>
+            <li style="width: 166px" class="pure-menu-item"><a href="https://studio.topmonks.com/"
+                                                               class="pure-menu-link">startup studio</a></li>
           </ul>
         </nav>
       </div>
@@ -55,6 +55,9 @@
             not give you what you asked for. They will give you what you&nbsp;want.</p>
         </blockquote>
         <a class="action-button jumbotron__cta">How we work</a>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <p class="box--purple">TopMonks</p>
       </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
           <div class="box listen">
@@ -278,7 +281,7 @@
       </div>
       <div
         class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-        <div class="photo">
+        <div class="person--photo">
           <img src="/images/topmonks.com/kristy.jpg">
         </div>
         <h4>Kristýna Sloupová</h4>
