--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -50,11 +50,13 @@
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2 class="jumbotron__title">Team as a service</h2>
-        <blockquote class="jumbotron__lead">
-          <p>And they are perfectionists. Ask them to build you a product, and they will
-            not give you what you asked for. They will give you what you&nbsp;want.</p>
-        </blockquote>
-        <a class="action-button jumbotron__cta">How we work</a>
+        <div class="box box--lead">
+          <blockquote class="jumbotron__lead">
+            <p>And they are perfectionists. Ask them to build you a product, and they will
+              not give you what you asked for. They will give you what you&nbsp;want.</p>
+          </blockquote>
+          <a class="action-button jumbotron__cta">How we work</a>
+        </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <p class="box--purple">TopMonks</p>
